Completion for infix/postfix